--- a/roles/mongodb/tasks/main2.yml
+++ b/roles/mongodb/tasks/main2.yml
@@ -6,10 +6,17 @@
 #                   GNU General Public License v3.0                     #
 #########################################################################
 ---
-- name: "Execute MongoDB roles"
-  include_tasks: main2.yml
-  vars:
-    mongodb_name: "{{ role }}"
-  with_items: "{{ mongodb_instances }}"
-  loop_control:
-    loop_var: role
+- name: Remove existing Docker container
+  ansible.builtin.include_tasks: "{{ resources_tasks_path }}/docker/remove_docker_container.yml"
+
+- name: Create directories
+  ansible.builtin.file:
+    path: "{{ item }}"
+    state: directory
+    owner: "{{ user.name }}"
+    group: "{{ user.name }}"
+    mode: "0775"
+  with_items: "{{ lookup('vars', role_name + '_paths_folders_list') }}"
+
+- name: Create Docker container
+  ansible.builtin.include_tasks: "{{ resources_tasks_path }}/docker/create_docker_container.yml"
