--- a/roles/authelia/tasks/main.yml
+++ b/roles/authelia/tasks/main.yml
@@ -12,14 +12,20 @@
     msg: "This server is not set as Authelia master server."
   when: not authelia_is_master
 
+- name: Settings Task
+  ansible.builtin.import_tasks: "subtasks/domain.yml"
+
 - name: "Import Redis Role"
   ansible.builtin.include_role:
     name: redis
 
-- name: Install argon2_cffi python package
-  ansible.builtin.pip:
-    name: argon2_cffi
-    executable: pip3
+- name: "Import OpenLDAP Role"
+  ansible.builtin.include_role:
+    name: openldap
+
+- name: "Import phpLDAPadmin Role"
+  ansible.builtin.include_role:
+    name: phpldapadmin
 
 - name: Add DNS record
   ansible.builtin.include_tasks: "{{ resources_tasks_path }}/dns/tasker.yml"
@@ -39,11 +45,6 @@
     path: "{{ authelia_paths_location }}/configuration.yml"
   register: authelia_config_stat
 
-- name: Check if 'users_database.yml' exists
-  ansible.builtin.stat:
-    path: "{{ authelia_paths_location }}/users_database.yml"
-  register: authelia_user_config_stat
-
 - name: Import default 'configuration.yml'
   ansible.builtin.template:
     src: configuration.yml.j2
@@ -52,20 +53,6 @@
     group: "{{ user.name }}"
     mode: "0775"
   when: (not authelia_config_stat.stat.exists)
-
-- name: "Generate Password Hash"
-  ansible.builtin.shell: "docker run --rm -v '{{ authelia_paths_location }}:/config' {{ authelia_docker_image }} authelia hash-password '{{ user.pass }}' | sed -n 's/^Password hash: //p'"
-  register: authelia_password
-  when: (not authelia_user_config_stat.stat.exists)
-
-- name: Import default 'users_database.yml'
-  ansible.builtin.template:
-    src: users_database.yml.j2
-    dest: "{{ authelia_paths_location }}/users_database.yml"
-    owner: "{{ user.name }}"
-    group: "{{ user.name }}"
-    mode: "0775"
-  when: (not authelia_user_config_stat.stat.exists)
 
 - name: Settings Task
   ansible.builtin.import_tasks: "subtasks/settings.yml"
