--- a/roles/phpldapadmin/tasks/main.yml
+++ b/roles/phpldapadmin/tasks/main.yml
@@ -1,5 +1,5 @@
 #########################################################################
-# Title:         Saltbox: LDAP User Manager Role                        #
+# Title:         Saltbox: phpLDAPadmin Role                             #
 # Author(s):     salty                                                  #
 # URL:           https://github.com/saltyorg/Saltbox                    #
 # --                                                                    #
