Add Authelia to logrotate

--- a/roles/system/defaults/main.yml
+++ b/roles/system/defaults/main.yml
@@ -21,4 +21,5 @@ system_locale: "en_US.UTF-8"
 system_language: "en_US.UTF-8"
 
 traefik_max_log_size: 10M
+authelia_max_log_size: 10M
 saltbox_max_log_size: 2M
